--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,5 +48,5 @@ jobs:
       - name: Run Ansible Playbook
         run: |
           ansible-playbook -i "${{ env.EC2_IP }}," ansible/playbook.yml -u "ubuntu" \
-            --private-key ca1-key.pem \
+            --private-key key.pem \
             -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
